arrow fix on IE

--- a/wp-content/themes/success-capital/assets/scss/containers/_avantages-banner.scss
+++ b/wp-content/themes/success-capital/assets/scss/containers/_avantages-banner.scss
@@ -8,6 +8,7 @@
       flex-direction: column;
       justify-content: space-between;
       .box {
+        box-sizing: border-box;
         margin: 10px 0;
         width: 100%;
         max-width: 350px;
@@ -18,13 +19,15 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         img {
           max-width: 100px;
           max-height: 100px;
-          margin: auto;
           padding-bottom: 20px;
         }
         .text {
+          max-width: 100%;
+          box-sizing: border-box;
           text-align: center;
           font-size: 24px;
           line-height: 28px;
